Fix summary section title alignment

--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ footer a {
 
   #summary h2 {
     grid-area: title;
-    margin-top: 0;
+    /* margin-top: 0; */
     margin-bottom: 0.2rem;
   }
 
